# foundry-website

./: .gitignore  README.md  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
content/: citations.md  first.md  second.md
md-builder/: Cargo.toml  README.md  config-test.yaml  config.yaml
md-builder/src/: citations.rs  config.rs  csl_client.rs  lib.rs  main.rs  zotero.rs
src/: App.tsx  index.tsx
src/assets/content/: citations.json  first.json  index.json  second.json
src/components/navigation/: nav-header.tsx
src/components/page-components/: hero.tsx  layout.tsx
src/components/ui/: Logo.tsx  alert.tsx  animated-background.tsx  article.tsx  button.tsx  card.tsx  container.tsx  feature-card.tsx  filter-button.tsx  form.tsx  input.tsx  language-switcher.tsx  navigation-menu.tsx  post-card.tsx  prose.tsx  section.tsx  select.tsx  tag.tsx  textarea.tsx  theme-toggle.tsx
src/contexts/: language-context.tsx  theme-context.tsx
src/hooks/: useTranslation.ts
src/i18n/: translations.d.ts  translations.json
src/lib/: content.ts  theme.ts  utils.ts
src/pages/: BlogIndex.tsx  BlogPost.tsx  LandingPage.tsx  demo.tsx  landing-page.tsx
src/types/: blog.ts
