[package]
name = "site-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
pulldown-cmark = "0.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
walkdir = "2.3"
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9.34"
image = "0.25.4"
hayagriva = "0.8.0"
regex-lite = "0.1.6"
reqwest = { version = "0.12.9", features = ["json", "blocking"] }
dotenvy = "0.15.7"
rayon = "1.8"
indicatif = "0.17"
clap = { version = "4.0", features = ["derive"], optional = true }
syntect = "5.1"
html-escape = "0.2"

# WASM-specific dependencies
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }

[features]
default = ["cli"]
cli = ["clap"]
wasm = ["wasm-bindgen", "js-sys", "web-sys", "console_error_panic_hook", "wee_alloc"]

[lib]
crate-type = ["cdylib", "rlib"]


